indi-nexstarevo (0.3.0) UNRELEASED; urgency=medium

  * Much better tracking performance
  * Always approach from the direction of tracking
  * Telescope autodetection implemented
  * Telescope simulator added with stellarium monitoring connector
  * Dropped dynamical memory allocations in the driver 
  * Improved stability (still a bit problematic though)
  * Improved and simplified command processing logic
  * Some code clean up

 -- Paweł T. Jochym <jochym@mamba.lan>  Wed, 08 Feb 2017 08:35:48 +0100

indi-nexstarevo (0.2.3) unstable; urgency=low

  * Free-hand movement
  * IPARCOS movement panel compatibility

 -- Paweł T. Jochym <jochym@wolf.ifj.edu.pl>  Wed, 08 Feb 2017 08:35:20 +0100

indi-nexstarevo (0.2.2) UNRELEASED; urgency=low

  * Update for new API in indilib 1.2.0
  * GPS support and emulator
  * Better communication

 -- Pawel T. Jochym <jochym@wolf.ifj.edu.pl>  Tue, 14 Feb 2016 17:23:15 +0100

indi-nexstarevo (0.2.1) UNRELEASED; urgency=low

  * Update for new API in indilib 1.1.0
  * Add proper configuration options
  * Transition closer to alpha/beta state

 -- Pawel T. Jochym <jochym@wolf.ifj.edu.pl>  Tue, 01 Dec 2015 15:03:45 +0100

indi-nexstarevo (0.2) stable; urgency=low

  * Initial release

 -- Pawel T. Jochym <jochym@wolf.ifj.edu.pl>  Mon, 30 Nov 2015 08:00:00 +0100
 